@@ -1,3 +1,8 @@
+Sun Jul 24 01:24:31 2011  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/specification.rb:  Restore behavior of
+	  Gem::Specification#loaded.  [Ruby 1.9 - Bug #5032]
+
 Sun Jul 24 01:14:49 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* test/rake/test_rake_functional.rb (setup): Use __FILE__ for the base
